# nqs_bench_chem

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/nqs_bench_chem/: __about__.py  noise_models.py
src/nqs_bench_chem/conf/: lih_scan.yml
src/nqs_bench_chem/core/: __init__.py  active_space.py  config.py  molecule.py
tests/: __init__.py  test_active_space.py  test_week1.py
